--- a/index.html
+++ b/index.html
@@ -694,6 +694,17 @@ color:#fff}
         </div>
 
         <div class="slide">
+            <section>
+            	<header>
+            		<h1>Firebug-Plugin: FireSass</h1>
+            	</header>
+                <p>
+                    <img src="src/firesass.png" alt="FireSass" />
+                </p>
+            </section>
+        </div>
+
+        <div class="slide">
         	<section>
         		<header>
         			<h1>Projekte mit Sass</h1>
@@ -736,7 +747,7 @@ color:#fff}
                 	<li>Es wird immer zunaechst das CSS analysiert.</li>
                 	<li>Je unspezifischer die Selektoren, besonders die letzten,
                     desto langsamer das Rendering.</li>
-                    <li>miGadgets ist unglaublich langsam! (~3500 Zeilen CSS)
+                    <li>miGadgets ist unglaublich langsam! (screen.css ~= 7300 Zeilen CSS)
                         Firebug beinahe unnutzbar.</li>
                 </ul>
             </section>
